--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
      <!--La etiqueta script me permite escribir código Javascript para ejecutar algo
      <script> 
          console.log('Hola') 
-     </script>-->
+    </script>-->
+
 
 </head>
 <body>
@@ -139,6 +140,13 @@
         </div>
     </footer>
 
+    <script>
+         console.log('Hola desde la consola') 
+   
+    // Una ventana emergente:
+    // alert('Hola mundo JS C#24162 😎');
+    </script>
+    
 </body>
 <!-- <p>Con la tecla Ctrl + } comento el código VSC.</p> -->
 <!--  Usar Control + c para copiar, Ctrl + x para cortar y Ctrl + v para pegar>-->
