--- a/index.html
+++ b/index.html
@@ -140,9 +140,7 @@
         </div>
     </footer>
 
-    <script>
-         console.log('Hola desde la consola') 
-   
+    <script src="./static/js/index.js">
     // Una ventana emergente:
     // alert('Hola mundo JS C#24162 😎');
     </script>
