--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
                Generé cuatro secciones dentro del contenido de la página: -->
         <section id="banner">
         <!-- Divido el contenido principal en secciones. A la primera sección la identifico con un atributo id para después trabajar con ella por medio de Javascript o CSS. -->
-            <h1>Películas, series ilimitadas y mucho más</h1> <!--Las etiquetas h1 a h6 son etiquetas para hacer títulos y subtítulos.-->
+            <div class="banner-card container">  <!--Nomenclatura tipo BEM -->
+                <h1>Películas, series ilimitadas y mucho más</h1> <!--Las etiquetas h1 a h6 son etiquetas para hacer títulos y subtítulos.-->
+                <h2>Disfrutá donde quieras. Cancelá cuando quieras</h2>
+                <a href="./templates/register.html" id="btn-register">Registrarse</a>
+            </div>
         </section> 
         <section id="search">
             <h2>¿Qué estás buscando?</h2>
