--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     El atributo type="square" es para que la lista no posea círculos y esté ordenada con cuadrados-->
                     <li><a href="#popular">Tendencias</a></li>
                     <li>
-                        <a href="./register.html">Registrarse</a> 
+                        <a href="./register.html" class="btn-cac">Registrarse</a> 
                         <!--La etiqueta a, de anchor ("ancor" o "ancla"), es para crear enlaces.
                             En este caso, un enlace  interno a una ruta relativa a un archivo dentro del proyecto.
                             Para hacer esto, dentro del href escribir "./" y, a continuación, la ubicación y el nombbre del archivo del enlace en nuestro directorio.-->
