--- a/index.html
+++ b/index.html
@@ -115,17 +115,34 @@
         <section id="popular">
             <h2>Las tendencias de hoy</h2>
             <div id="popular-list"> <!--Un contentedor, un divisor donde puedo agrupar distintos elementos html. La etiqueta div es un elemento en bloque.-->
-                <a href=""><img src="https://picsum.photos/200/300" alt="Foto de una película." width="200" ></a>
-                    <!-- Con la etiqueta img voy a agregar una imagen, a partir del atributo src indico la ruta.
-                         El atributo alt posibilita una semántica de acuerdo al usuario, 
-                         por un lado, si no carga la imagen indica el contenido de la misma, 
-                         por el otro, es para la accesibilidad del usuario y los asistentes virtuales.-->
-                <a href="">
-                    <img src="./static/img/Oppenheimer.jpg" alt="Foto de la película Oppenheimer." width="200" >
-                    <!-- Una ruta relativa, en un archivo interno. 
-                         Las rutas pueden ser relativas o absolutas.-->
-                </a>
-               
+               <div class="movie-item" id="movie-1">
+    
+                         <!--<a href=""><img src="https://picsum.photos/200/300" alt="Foto de una película." width="200" ></a>
+                            Con la etiqueta img voy a agregar una imagen, a partir del atributo src indico la ruta.
+                                El atributo alt posibilita una semántica de acuerdo al usuario, 
+                                por un lado, si no carga la imagen indica el contenido de la misma, 
+                                por el otro, es para la accesibilidad del usuario y los asistentes virtuales.-->
+                        <a href="">
+                            <img src="./static/img/Oppenheimer.jpg" alt="Foto de la película Oppenheimer." >
+                            <!-- Una ruta relativa, en un archivo interno. 
+                                Las rutas pueden ser relativas o absolutas.-->
+                            <div>
+                                <p>Oppenheimer</p>
+                                <p>2023 ~ 10.0</p>
+                            </div>    
+                        </a>    
+                </div>  
+                <div class="movie-item" id="movie-2">
+                    <a href="">
+                        <img src="./static/img/poor-things.jpg" alt="Foto de la película Poor things con Ema Stone." >
+                        <!-- Una ruta relativa, en un archivo interno. 
+                            Las rutas pueden ser relativas o absolutas.-->
+                        <div>
+                            <p>Poor Things</p>
+                            <p>2023 ~ 9.8</p>
+                        </div>    
+                    </a>    
+                </div>       
             </div>
         </section>
         <section id="top-rated">
