--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </section>
     </main>
 
-    <footer><!-- El pie de página. -->
+    <footer ID="footer"><!-- El pie de página. -->
         <div class="nav-links">
             <a href="#">Términos y condiciones</a>  <!--Etiquetas en linea, para separarlas hay que usar el br, la etiqueta de break. -->
             <a href="#">Preguntas frecuentes</a>
