--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
             <div class="container">
                 <h2 class="h2-subtitle">Las tendencias de hoy</h2>
                 <div id="popular-list"> <!--Un contentedor, un divisor donde puedo agrupar distintos elementos html. La etiqueta div es un elemento en bloque.-->
-                <div class="movie-item">
+                <div class="movie-item" id="movie-1">
         
                         <!--<a href=""><img src="https://picsum.photos/200/300" alt="Foto de una película." width="200" ></a>
                             Con la etiqueta img voy a agregar una imagen, a partir del atributo src indico la ruta.
                                 El atributo alt posibilita una semántica de acuerdo al usuario, 
                                 por un lado, si no carga la imagen indica el contenido de la misma, 
                                 por el otro, es para la accesibilidad del usuario y los asistentes virtuales.-->
-                        <a href="./templates/detail-movie.html" id="movie-1">
+                        <a href="./templates/detail-movie.html">
                             <img class="movie-item-img" src="./static/img/Oppenheimer.jpg" alt="Foto de la película Oppenheimer." >
                             <!-- Una ruta relativa, en un archivo interno. 
                                 Las rutas pueden ser relativas o absolutas.-->
@@ -133,8 +133,8 @@
                             </div>    
                         </a>    
                     </div>  
-                    <div class="movie-item">
-                        <a href="./templates/detail-movie.html" id="movie-2">
+                    <div class="movie-item" id="movie-2">
+                        <a href="./templates/detail-movie.html">
                             <img class="movie-item-img" src="./static/img/poor-things.jpg" alt="Foto de la película Poor things con Ema Stone." >
                             <div class="movie-item-detail">
                                 <p class="movie-item-detail-title">Poor Things</p>
@@ -142,8 +142,8 @@
                             </div>    
                         </a>    
                     </div>       
-                    <div class="movie-item">
-                        <a href="./templates/detail-movie.html" id="movie-3">
+                    <div class="movie-item" id="movie-3">
+                        <a href="./templates/detail-movie.html">
                             <img class="movie-item-img" src="#" alt="Foto de la película Poor things con Ema Stone." >
                             <div class="movie-item-detail">
                                 <p class="movie-item-detail-title">...</p>
@@ -151,8 +151,8 @@
                             </div>    
                         </a>    
                     </div>     
-                    <div class="movie-item">
-                        <a href="">
+                    <div class="movie-item" id="movie-4">
+                        <a href="./templates/detail-movie.html">
                             <img class="movie-item-img" src="#" alt="Foto de la película Poor things con Ema Stone." >
                             <div class="movie-item-detail">
                                 <p class="movie-item-detail-title">...</p>
