--- a/index.html
+++ b/index.html
@@ -115,17 +115,16 @@
             <div class="container">
                 <h2 class="h2-subtitle">Las tendencias de hoy</h2>
                 <div id="popular-list"> <!--Un contentedor, un divisor donde puedo agrupar distintos elementos html. La etiqueta div es un elemento en bloque.-->
-                <div class="movie-item" id="movie-1">
-        
-                        <!--<a href=""><img src="https://picsum.photos/200/300" alt="Foto de una película." width="200" ></a>
-                            Con la etiqueta img voy a agregar una imagen, a partir del atributo src indico la ruta.
-                                El atributo alt posibilita una semántica de acuerdo al usuario, 
-                                por un lado, si no carga la imagen indica el contenido de la misma, 
-                                por el otro, es para la accesibilidad del usuario y los asistentes virtuales.-->
+                    <div class="movie-item" id="movie-1">
+                    <!--<a href=""><img src="https://picsum.photos/200/300" alt="Foto de una película." width="200" ></a>
+                        Con la etiqueta img voy a agregar una imagen, a partir del atributo src indico la ruta.
+                        El atributo alt posibilita una semántica de acuerdo al usuario, 
+                        por un lado, si no carga la imagen indica el contenido de la misma, 
+                        por el otro, es para la accesibilidad del usuario y los asistentes virtuales.-->
                         <a href="./templates/detail-movie.html">
                             <img class="movie-item-img" src="./static/img/Oppenheimer.jpg" alt="Foto de la película Oppenheimer." >
-                            <!-- Una ruta relativa, en un archivo interno. 
-                                Las rutas pueden ser relativas o absolutas.-->
+                        <!-- Una ruta relativa, en un archivo interno. 
+                            Las rutas pueden ser relativas o absolutas.-->
                             <div class="movie-item-detail">
                                 <p class="movie-item-detail-title">Oppenheimer</p>
                                 <p class="movie-item-detail-subtitle">2023 ~ 10.0</p>
@@ -142,23 +141,41 @@
                         </a>    
                     </div>       
                     <div class="movie-item" id="movie-3">
-                        <a href="./templates/detail-movie.html">
-                            <img class="movie-item-img" src="#" alt="Foto de la película Poor things con Ema Stone." >
-                            <div class="movie-item-detail">
-                                <p class="movie-item-detail-title">...</p>
-                                <p class="movie-item-detail-subtitle">2023 ~ 9.8</p>
+                     <a href="./templates/detail-movie.html">
+                         <img class="movie-item-img" src="./static/img/Horizon_An_American_Saga_Capaitulo_1.jpg" alt="Foto de la película Horizon con Kevin Costner." >
+                          <div class="movie-item-detail">
+                              <p class="movie-item-detail-title">Horizon: An American Saga</p>
+                              <p class="movie-item-detail-subtitle">2024 ~ 9.5</p>
                             </div>    
                         </a>    
                     </div>     
                     <div class="movie-item" id="movie-4">
                         <a href="./templates/detail-movie.html">
-                            <img class="movie-item-img" src="#" alt="Foto de la película Poor things con Ema Stone." >
+                            <img class="movie-item-img" src="./static/img/Siempre hay un mañana.jpg" alt="Foto de la película Siempre hay un mañana." >
                             <div class="movie-item-detail">
-                                <p class="movie-item-detail-title">...</p>
-                                <p class="movie-item-detail-subtitle">2023 ~ 9.8</p>
+                                <p class="movie-item-detail-title">Siempre hay un mañana</p>
+                                <p class="movie-item-detail-subtitle">2024 ~ 9.9</p>
                             </div>    
                         </a>    
-                    </div>     
+                    </div>   
+                    <div class="movie-item" id="movie-5">
+                        <a href="./templates/detail-movie.html">
+                            <img class="movie-item-img" src="./static/img/Nosferatu.jpg" alt="Foto de la película Nosferatu 2024." >
+                            <div class="movie-item-detail">
+                                <p class="movie-item-detail-title">Nosferatu</p>
+                                <p class="movie-item-detail-subtitle">2024 ~ 9.9</p>
+                            </div>    
+                        </a>    
+                    </div>    
+                    <div class="movie-item" id="movie-6">
+                        <a href="./templates/detail-movie.html">
+                            <img class="movie-item-img" src="./static/img/dune-part-2-character-posters_s4rh.600.jpg" alt="Foto de la película Duna 2." >
+                            <div class="movie-item-detail">
+                                <p class="movie-item-detail-title">Dune: Parte 2</p>
+                                <p class="movie-item-detail-subtitle">2024 ~ 8.9</p>
+                            </div>    
+                        </a>    
+                    </div>    
                 </div>
             </section>
             <section id="top-rated">
