Flex-wrap y align-content: center para el contenedor de las películas

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <section id="popular">
             <div class="container">
                 <h2 class="h2-subtitle">Las tendencias de hoy</h2>
-                <div id="popular-list"> <!--Un contentedor, un divisor donde puedo agrupar distintos elementos html. La etiqueta div es un elemento en bloque.-->
+                <div id="popular-list" class="movies-flex"> <!--Un contentedor, un divisor donde puedo agrupar distintos elementos html. La etiqueta div es un elemento en bloque.-->
                     <div class="movie-item" id="movie-1">
                     <!--<a href=""><img src="https://picsum.photos/200/300" alt="Foto de una película." width="200" ></a>
                         Con la etiqueta img voy a agregar una imagen, a partir del atributo src indico la ruta.
