--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
     <script src="./static/js/index.js">
     // Una ventana emergente:
-    // alert('Hola mundo JS C#24162 😎');
+    // alert('Hola mundo JS 😎');
     </script>
     
 </body>
