--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
      <!--La etiqueta script me permite escribir código Javascript para ejecutar algo
      <script> 
-         console.log('Hola') 
+         console.log('Hola'); 
     </script>-->
 
 
