--- a/index.html
+++ b/index.html
@@ -43,12 +43,6 @@
      <!--Enlazo el script con un archivo CSS externo:--> 
      <link rel="stylesheet" href="./static/css/style.css"> 
 
-     <!--La etiqueta script me permite escribir código Javascript para ejecutar algo
-     <script> 
-         console.log('Hola'); 
-    </script>-->
-
-
 </head>
 <body>
 
@@ -226,6 +220,9 @@
     <script src="./static/js/index.js">
     // Una ventana emergente:
     // alert('Hola mundo JS 😎');
+ 
+    //La etiqueta script me permite escribir código Javascript para ejecutar algo, en este caso por medio de la consola del navegador:
+         console.log('Hola'); 
     </script>
     
 </body>
