--- a/index.html
+++ b/index.html
@@ -217,12 +217,14 @@
         </div>
     </footer>
 
+    <!-- Una referencia externa -->
     <script src="./static/js/index.js">
+
     // Una ventana emergente:
     // alert('Hola mundo JS 😎');
  
     //La etiqueta script me permite escribir código Javascript para ejecutar algo, en este caso por medio de la consola del navegador:
-         console.log('Hola'); 
+        //console.log('Hola'); 
     </script>
     
 </body>
