--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
     <!-- Una referencia externa -->
     <script src="./static/js/index.js">
 
+    // Referencias internas-->
+
     // Una ventana emergente:
     // alert('Hola mundo JS 😎');
  
